[package]
name = "portfolio-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.58"
dotenv = { version = "0.15" }
env_logger = "0.10.0"
log = "0.4"
serde_json = "1.0"
sqlx = { version = "0.8.3", features = ["runtime-async-std-native-tls", "postgres","chrono"] }
chrono = { version = "0.4.24", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
